# vfs.sftp

./: CMakeLists.txt  FindTinyXML.cmake
src/: SFTPFile.cpp  SFTPSession.cpp  SFTPSession.h
vfs.sftp/: addon.xml
